# subject-alglin

./: .gitignore  README.md  pyproject.toml
subject-alglin/: trab-final.ipynb
