[tool.poetry]
name = "subject-alglin"
version = "0.1.0"
description = ""
authors = ["Lucas Ferreira de Almeida <lucasf.almeida.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "subject_alglin"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
ipykernel = "^6.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
